--- a/nav.css
+++ b/nav.css
@@ -1,69 +1,92 @@
-* {
+/* eliminating all default styling*/
+*{
     padding: 0px;
     margin: 0px;
 }
-.navbar {
-   background-color: lightgrey;
-   display: flex; 
-   justify-content: space-around;
-   align-items: center;
-   min-height: 80px;
-}
-.navbar ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    width: 200px;
 
-}
-.navbar a {
-    text-transform: uppercase;
-
-}
-.navbar a:hover {
-    background-color: royalblue;
-    color: white;
-} 
-
- img {
-    width: 60px;
-    height: 60px;
-    
-
-}
-li a {
-    color: red;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    padding: 10px;
-
-}
-.navbar ul li {
+/* styling the navbar */
+.navbar{
+    background-color: lightgray;
+    min-height: 80px;
     position: relative;
+    color: red;
+}
+/* styling nav log */
+img{
+    width:50px;
+    height: 50px;
+}
+/* givining a display none to the input element */
+#toggle{
+    display: none;
+}
+/* floating the hamburger menu to the right top corner of the navbar */
+label{
+    position: absolute;
+    top:0px;
+    right:0px;
+    
+}
+/* inlining the navbar item */
+.navlinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
 
 }
-.navbar ul ul {
+/* changing navlinks to block element*/
+.navlinks a {
+    display:inline-block;
+    font-size: 20px;
+    padding: 4px 15px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: inherit;
+}
+.navlinks a:hover{
+    background-color: blue;
+    color: white;
+}
+.navlinks li{
+    position: relative;
+}
+/* styling the sub menu items */
+.navlinks ul {
+    position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    width: 200px;
-    position: absolute;
-    left: 0px;
-
+    justify-content: space-around;
+    width: 100px;
+    margin-left: 12px;
+    list-style: none;
 }
-ul ul li a {
-    display: inline-block;
-    margin-right: 85px;
-    margin-top: 8px;
-
+.navlinks ul {
+    display: none;
 }
-.navbar ul ul {
+.navlinks li:hover > ul {
+    display: flex;
+}
+label {
     display:none;
 }
-.navbar ul li:hover > ul {
-    display: block;
-}
+/* creating the moblie view */
+@media screen and (max-width:400px) {
+    label{
+        display:block;
+        margin: 10px;
+        
+    }
+    .navlinks {
+        display:flex;
+        flex-direction: column;
+        display: none;
+    }
+    #toggle:checked + .navlinks {
+        display: flex;
+        
+    }
 
-  
+}
