--- a/nav.css
+++ b/nav.css
@@ -1,92 +1,116 @@
-/* eliminating all default styling*/
+/* removing all default styling */
 *{
-    padding: 0px;
-    margin: 0px;
+    padding:0;
+    margin: 0;
+    box-sizing: border-box;
 }
-
+/* styling the logo */
+img{
+    width: 40px;
+    height: 40px;
+    margin: 5px;;
+}
 /* styling the navbar */
 .navbar{
-    background-color: lightgray;
-    min-height: 80px;
+    background-color: lightgrey;
+    height: 10vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     position: relative;
-    color: red;
+
 }
-/* styling nav log */
-img{
-    width:50px;
-    height: 50px;
+/* styling the navbar list */
+.navbar ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
 }
-/* givining a display none to the input element */
+/* styling the navbar links */
+.navbar a {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 2px 10px;
+    color:red;
+}
+.navbar a:hover{
+    background-color:blue;
+    color:white;
+}
+/* removing the input tag from the desktop view */
 #toggle{
     display: none;
 }
-/* floating the hamburger menu to the right top corner of the navbar */
+/* moving the hamburger tag to the right top corner */
 label{
-    position: absolute;
-    top:0px;
-    right:0px;
-    
-}
-/* inlining the navbar item */
-.navlinks {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-
-}
-/* changing navlinks to block element*/
-.navlinks a {
-    display:inline-block;
-    font-size: 20px;
-    padding: 4px 15px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: inherit;
-}
-.navlinks a:hover{
-    background-color: blue;
-    color: white;
-}
-.navlinks li{
-    position: relative;
-}
-/* styling the sub menu items */
-.navlinks ul {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around;
-    width: 100px;
-    margin-left: 12px;
-    list-style: none;
-}
-.navlinks ul {
+    position:absolute;
+    top:7px;
+    right:3px;
     display: none;
-}
-.navlinks li:hover > ul {
-    display: flex;
-}
-label {
-    display:none;
-}
-/* creating the moblie view */
-@media screen and (max-width:400px) {
-    label{
-        display:block;
-        margin: 10px;
-        
-    }
-    .navlinks {
-        display:flex;
-        flex-direction: column;
-        display: none;
-    }
-    #toggle:checked + .navlinks {
-        display: flex;
-        
-    }
 
+}
+/* creating opening hambuger tag */
+span{
+    width: 15px;
+    height: 2px;
+    background-color: blue;
+    display: block;
+    margin: 5px;
+}
+/*  creating the mobile view */
+@media only screen and (max-width:700px) {
+
+    img{
+        position:absolute ;
+        top:0px;
+        left:2px;
+    }
+    label{
+        display: block;
+        cursor: pointer;
+    }
+    
+    .navbar ul{
+        position: fixed;
+        position: right;
+        height: 92vh;
+        top:8.5vh;
+        background-color: lightgrey;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translate(100%);
+        transition: transform 1s ease-in;
+
+    }
+    /* controlling navigation links with the hamburger opening tag */
+
+    #toggle:checked + label + ul{
+        display: flex;
+    }
+    /* creating the closing hamburger */
+    #toggle:checked + label span:nth-child(1){
+        background-color:black;
+        transform: rotate(130deg);
+        position: absolute;
+     
+     }
+     
+     #toggle:checked + label span:nth-child(2){
+        background-color: black; 
+        transform: rotate(45deg);
+
+    
+     }
+     #toggle:checked + label span:nth-child(3){
+         display: none;
+     
+     }
+     #toggle:checked + label + ul {
+         transform: translate(0%);
+     }
+     
 }
