--- a/nav.css
+++ b/nav.css
@@ -1,125 +1,245 @@
 /* removing all default styling */
 *{
-    padding:0;
-    margin: 0;
+    padding:0px;
+    margin: 0px;
     box-sizing: border-box;
 }
-
 /* styling the logo */
-img{
-    width: 40px;
-    height: 40px;
-    
+.logo{
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color:blue;
 }
-/* styling the navbar */
-.navbar{
-    background-color: lightgrey;
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    padding: 0px 30px;
-
-}
-/* styling the navbar list */
-.navbar ul{
-    display: flex;
+/* styling the nav bar */
+nav{
+    min-height: 10vh;
+    background-color: lightgray;
+    display:flex;
     justify-content: space-around;
     align-items: center;
+    
+}
+/* styling the order list */
+nav .list_container{
+     list-style: none;
+     display: flex;
+     width:50%;
+     justify-content: space-around;
+     
+}
+/* styling the nav links item */
+nav  .list_container a{
+    text-decoration: none;
+    color:red;
+    letter-spacing: 2px;
+    
+}
+/* effect when you hover the links item */
+ nav .list_container li a:hover{
+    background-color: rgb(132, 132, 245);
+    color:yellow;
+}
+/* making the home link active */
+.active{
+    background-color:rgb(161, 161, 236);
+}
+/* making the sub nav relative to it parent */
+nav .list_container li {
+    position:relative;
+}
+/* styling the sub-nav*/
+ nav .list_container li ul{
+    position: absolute;
+    opacity: 0;
     list-style: none;
+    display:flex;
+    flex-direction: column;
+    width: 120px;
+    height: 100px;
+    background-color: lightgray;
+    align-items: center; 
+    transition: 1s ease-in;
+    justify-content: space-around;
+    
+}
+/* displaying the sub-nav when you hover the navbar */
+
+nav .list_container li:hover > ul {
+    opacity:1;
+    
+}
+nav .list_container li ul li {
+    width:100%;
+    height: 100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+nav .list_container li ul li:hover {
+    background-color:blue;
+    
+}
+ nav .list_container li ul a{
+    display: inline-block;
 
 }
-/* styling the navbar links */
-.navbar a {
-    display: inline-block;
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 2px 10px;
-    color:red;
-}
-.navbar a:hover{
-    background-color:blue;
-    color:white;
-}
-/* removing the input tag from the desktop view */
-#toggle{
-    display: none;
-}
-/* moving the hamburger tag to the right top corner */
-label{
-    position: absolute;
-    top: 26px; 
-    right:15px;
+/* styling the togglebar */
+label .togglebar{
+    width:13px;
+    height:2px;
+    background-color: black;
+    margin:2px 0px;
     display:none;
 }
-span{
-    display: block;
-    width: 16px;
-    height: 2px;
-    background-color: red;
-    margin: 3px;
-   
+#toggle{
+    display:none;
 }
+/* styling the footer for the desktop view */
+footer{
+    background-color: blue;
+    position: relative;
+    bottom:0px;
+    width: 100%;
 
-/*  creatin the mobile view */
-@media only screen and (max-width:700px) {
+}
+footer .social_media {
+    display: flex;
+    justify-content: center;
+    
+}
+footer .social_media i {
+    padding:15px;
+    color:white;
+    opacity:0.5;
+}
+footer .social_media i:hover{
+    opacity:1;
+}
+footer .footer_links {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+footer .footer_links li a {
+    display:inline-block;
+    padding: 15px;
+    text-decoration: none;
+    color:white;
+}
+footer .footer_links li a:hover {
+    color:black;
+}
+footer .copyright{
+    display:flex;
+    justify-content:center;
+}
+footer .copyright{
+    display:flex;
+    justify-content:center;
+    padding: 15px;
+    color:black;
+} 
+footer .copyright:hover{
+    display:flex;
+    justify-content:center;
+    padding: 15px;
+    color:white;
+} 
+/* styling the mobile view */
+
+@media screen and (max-width: 700px){
     body{
-        overflow: hidden;
+        background-color: lightgray;
     }
-    label{
-        display:block;
-    }
-  
-   .navbar{
-       padding: 0%;
-   }
-   img{
-       position: absolute;
-       left: 15px;
-   }
-
-    .navbar ul{
+nav .list_container{
         position: absolute;
-        height: 92vh;
-        top:8.5vh;
-        background-color: lightgrey;
+        top:10vh;
+        height: 50vh; 
+        background-color: lightgray;
+        left:-100%;
         display: flex;
+        width: 100%;
         flex-direction: column;
         align-items: center;
-        width: 100%;
-        transform: translate(100%);
-        transition: transform 1s ease-in;
-
+        transition: 1s ease-in;
     }
-    /* controlling navigation links with the hamburger opening tag */
-
-    #toggle:checked + label + ul{
+    /* styling logo */
+    .logo, label{
+        margin:0px 15px;
+    }
+    /* displaying the togglebar in the mobile view */
+    label .togglebar{
+        display: block;
+    }
+    nav{
         display: flex;
+        justify-content: space-between;
     }
-   
     
-     /*creating the closing hamburger*/
-    #toggle:checked + label span:nth-child(1){
-        background-color:black;
+    #toggle:checked ~ .list_container {
+        left:0%;
+    }
+    /* stlying the closing togglebar */
+    #toggle:checked + label .togglebar:nth-child(1){
         transform: rotate(130deg);
         position: absolute;
-    
-     }
-     
-     #toggle:checked + label span:nth-child(2){
-        background-color: black; 
-        transform: rotate(45deg);
-    
+    }
+    #toggle:checked + label .togglebar:nth-child(2){
+        transform: rotate(49deg);
 
-     }
-     #toggle:checked + label span:nth-child(3){
-         display: none;
-     
-     }
-     
-     #toggle:checked + label + ul {
-         transform: translateX(0%);
-     }
-     
+    }
+    #toggle:checked + label .togglebar:nth-child(3){
+        display:none;
+    }
+    .main_content{
+        margin:55% 0%;
+        position: relative;
+    } 
+    footer{
+        position: relative;
+        bottom:0px;
+        background-color:blue;
+        width: 100%;
+    }
+    footer .social_media {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        
+    }
+    footer .social_media i{
+        color:white;
+        padding: 15px;
+        opacity: 0.5;
+    }
+    footer .social_media i:hover{
+        opacity:1;
+    }
+    footer .footer_links{
+        display:flex;
+        justify-content: center;
+        list-style: none;
+        flex-wrap: wrap;
+
+    }
+    footer .footer_links li a{
+        padding: 15px;
+        color:white;
+        text-decoration: none;
+    }
+    footer .footer_links li a:hover{
+        color:black;    
+    }
+    footer .copyright{
+        display: flex;
+        justify-content: center;
+        margin: 15px;
+        color:white;
+    }
+    footer .copyright:hover{
+        color:black;
+    }
+
 }
+
